# wire-protocols

./: CMakeLists.txt  Dockerfile  NOTEBOOK.md  README.md  docker-compose.yml  resources.qrc  test.py
include/: constants.hpp  message_handler_functions.hpp
include/client/gui/: active_chats_tab.hpp  authentication_window.hpp  chat_area.hpp  chat_sidebar.hpp  chat_window.hpp  connection_window.hpp  login_tab.hpp  registration_tab.hpp  search_tab.hpp
include/client/gui/components/: channel_widget.hpp  message_widget.hpp  profile_widget.hpp  spinner.hpp  stacked_window.hpp  validated_text_input.hpp
include/client/model/: TcpClient.hpp  message_handlers.hpp  session.hpp  tcp_client.hpp
include/message/: create_channel.hpp  create_channel_response.hpp  delete_account.hpp  delete_account_response.hpp  delete_message.hpp  delete_message_response.hpp  header.hpp  list_accounts.hpp  list_accounts_response.hpp  login.hpp  login_response.hpp  register_account.hpp  register_account_response.hpp  send_message.hpp  send_message_response.hpp  serialize.hpp
include/models/: UUID.hpp  channel.hpp  channel_db.hpp  database.hpp  message.hpp  message_db.hpp  message_handler.hpp  message_handlers.hpp  snowflake.hpp  user.hpp  user_db.hpp  uuid.hpp
include/server/db/: channel_db.hpp  channel_table.hpp  database.hpp  message_db.hpp  message_table.hpp  password_table.hpp  user_db.hpp  user_table.hpp
include/server/model/: client_handler.hpp  message_handler.hpp  message_handlers.hpp  tcp_server.hpp
src/: main.cpp  message_handler_functions.cpp
src/message/: create_channel.cpp  create_channel_response.cpp  delete_account.cpp  delete_account_response.cpp  delete_message.cpp  delete_message_response.cpp  header.cpp  list_accounts.cpp  list_accounts_response.cpp  login.cpp  login_response.cpp  register_account.cpp  register_account_response.cpp  send_message.cpp  send_message_response.cpp
src/models/: UUID.cpp  channel.cpp  channel_db.cpp  database.cpp  message.cpp  message_db.cpp  snowflake.cpp  user.cpp  user_db.cpp  uuid.cpp
test/: test.cpp
test/database/: channel_table.cpp  database_test.cpp  message_table.cpp  password_table.cpp  user_table.cpp
test/message/: create_channel.cpp  create_channel_response.cpp  delete_account.cpp  delete_account_response.cpp  delete_message.cpp  delete_message_response.cpp  header_test.cpp  list_accounts.cpp  list_accounts_response.cpp  login_response.cpp  login_test.cpp  register_account_response.cpp  register_account_test.cpp  send_message.cpp
test/models/: UUID_test.cpp  db_tests.cpp  message_test.cpp  user_test.cpp
